# Cameleon

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  COPYING.icon  Cameleon.sln  Cameleon.vcxproj  Cameleon.vcxproj.filters  ComparisonDialog.cpp  ComparisonDialog.h  ComparisonDialog.ui  Constants.h  Document.cpp  Document.h  ElidedLabel.cpp  ElidedLabel.h  HeaderBar.cpp  HeaderBar.h  HeaderBar.ui  ImageView.cpp  ImageView.h  ImageWidget.cpp  ImageWidget.h  Instance.cpp  Instance.h  Layout.cpp  Layout.h  MainView.cpp  MainView.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  PatternMatching.cpp  PatternMatchingProgressDialog.cpp  PatternMatchingProgressDialog.h  PatternUtils.cpp  README.md  Settings.cpp  Settings.h  Try.cpp  (+8 more)
.github/workflows/: workflow.yml
3pty/glob/: README.txt  glob.cpp  glob.h
etc/: LicenceHeader.txt
icons/crystalsvg/: index.theme
icons/tango/: index.theme
src/: AlbumEditorDialog.cpp  AlbumEditorDialog.h  AlbumEditorDialog.ui  CMakeLists.txt  Cameleon.icns  Cameleon.plist.in  Cameleon.rc  CameleonApplication.cpp  CameleonApplication.h  CancellationException.h  ComparisonDialog.cpp  ComparisonDialog.h  ComparisonDialog.ui  Constants.h  ContainerUtils.h  Document.cpp  Document.h  ElidedLabel.cpp  HeaderBar.cpp  HeaderBar.h  HeaderBar.ui  ImageView.cpp  ImageView.h  ImageWidget.cpp  ImageWidget.h  Instance.cpp  Instance.h  MainView.cpp  MainView.h  MainWindow.cpp  MainWindow.h  MainWindow.qrc  MainWindow.ui  PatternMatching.cpp  PatternMatching.h  PatternMatchingProgressDialog.cpp  PatternUtils.cpp  RuntimeError.h  Version.h.in  crystalsvg.qrc  (+2 more)
test/: CMakeLists.txt  TestBookmarksMenu.cpp  TestBookmarksMenu.h  TestDataDir.h.in  TestFindInstances.cpp  TestFindInstances.h  TestMiscAlbumMenuItems.cpp  TestMiscAlbumMenuItems.h  TestNavigationMenu.cpp  TestNavigationMenu.h  TestNewAlbum.cpp  TestNewAlbum.h  TestNewDocument.cpp  TestNewDocument.h  TestOpenAlbum.cpp  TestOpenAlbum.h  TestOpenDocument.cpp  TestOpenDocument.h  TestPatternMatching.cpp  TestPatternMatching.h  TestUtils.h  TestViewMenu.cpp  TestViewMenu.h
test/data/: colours.cml.in  green-checkerboards.cml.in  no-matches.cml.in  red-checkerboard.cml.in
